# Rustendo

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  filio.rs  instruction.rs  macros.rs  main.rs  memory.rs  registers.rs  utils.rs
src/consoles/: addressable.rs  bus.rs  cartridge.rs  console.rs  fake_cartridge.rs  memory.rs  memory_map.rs  mod.rs  readable.rs  static_data.rs  writeable.rs
src/consoles/gameboy/: cpu.rs  game_boy.rs  gbcartridge.rs  instruction.rs  memory.rs  mod.rs  opcode.rs  registers.rs  target.rs
src/cpu/: cpu.rs  registers.rs
src/instruction/: instruction.rs  mod.rs  opcode.rs
src/memory/: memory.rs
src/utils/: conversion.rs
