[package]
name = "gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_set = { path = "../libs/get_set" }
builder  = { path = "../libs/builder" }
lmg_offset = { path = "../libs/lmg_offset" }
lazy_static = "1.4.0"
